changed calc display to avoid overflow of numbers

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
 	margin-left:auto;
   	margin-right:auto;
 	text-align: right;
+	overflow: hidden;
 }
 .in-screen{
 	text-align: right;	
